[package]
name = "x448"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed448-goldilocks = "0.6.0"
hex = "0.4.0"
rand_core = { version = "0.5", default-features = false }

[dev-dependencies]
rand ="0.7" # XXX: Want to remove this, but rand_core won't compile in tests without it